--- a/react/rsp-game/src/App.css
+++ b/react/rsp-game/src/App.css
@@ -1,5 +1,28 @@
+.total {
+    height: 100vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 5px;
+}
+
+.main {
+    display: flex;
+    gap: 2px;
+}
+
 .box {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     width: 300px;
     height: 300px;
     border: 2px solid black;
+}
+
+.box-img {
+    width: 150px;
+    height: 150px;
+    object-fit: contain;
 }
