--- a/react/weather-app/src/App.css
+++ b/react/weather-app/src/App.css
@@ -6,14 +6,18 @@
     font-style: normal;
 }
 
-body {
+/* body {
     background: url("./img/함부르크.jpeg");
     height: 100vh;
     background-repeat: no-repeat;
     background-size: cover;
-}
+} */
 
 .content-box {
+    /* background: url("./img/함부르크.jpeg");
+    background-repeat: no-repeat;
+    background-size: cover; */
+
     display: flex;
     flex-direction: column;
     align-items: center;
